--- a/style.css
+++ b/style.css
@@ -117,4 +117,29 @@ body, html {
     background-color: #0056b3;
   }
   
-  
+  nav {
+  background-color: #333;
+  padding: 10px;
+  text-align: center;
+}
+
+.menu {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.menu li {
+  display: inline;
+  margin-right: 20px;
+}
+
+.menu li a {
+  color: white;
+  text-decoration: none;
+  font-size: 16px;
+}
+
+.menu li a:hover {
+  color: #ff6347;
+}
